tests/baselines/reference/computedPropertyNames37_ES5(strict=true).errors.txt
computedPropertyNames37_ES5.ts(1,13): error TS7008: Member 'x' implicitly has an 'any' type.
computedPropertyNames37_ES5.ts(2,14): error TS7008: Member 'x' implicitly has an 'any' type.
computedPropertyNames37_ES5.ts(2,17): error TS7008: Member 'y' implicitly has an 'any' type.


==== computedPropertyNames37_ES5.ts (3 errors) ====
    class Foo { x }
                ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    class Foo2 { x; y }
                 ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
                    ~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
    
    class C {
        [s: number]: Foo2;
    
        // Computed properties
        get ["get1"]() { return new Foo }
        set ["set1"](p: Foo2) { }
    }